--- a/idf-component.yml
+++ b/idf-component.yml
@@ -1,3 +1,8 @@
-dependencies:
+version: 0.0.1
+targets:
+  - esp32s3
+description: C++ wrappers around ESP-IDF
+repository: https://github.com/abitmeh/esp-pp-idf.git
+url: https://github.com/espressif/esp-iot-solution/tree/master/components/motor/esp_simplefocdependencies:
   idf:
     version: '>=5.5.0'
