--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,5 @@
-file(GLOB_RECURSE SRC "*.cpp")
-
-idf_component_register(SRCS ${SRC}
+idf_component_register(SRC_DIRS "src"
                        INCLUDE_DIRS "include"
                        REQUIRES esp_driver_mcpwm esp_adc esp_driver_gpio esp_driver_gptimer)
 
 target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++23 -fkeep-inline-functions)
-
