--- a/idf-component.yml
+++ b/idf-component.yml
@@ -3,6 +3,7 @@ targets:
   - esp32s3
 description: C++ wrappers around ESP-IDF
 repository: https://github.com/abitmeh/esp-pp-idf.git
-url: https://github.com/espressif/esp-iot-solution/tree/master/components/motor/esp_simplefocdependencies:
+url: https://github.com/abitmeh/esp-pp-idf
+dependencies:
   idf:
     version: '>=5.5.0'
