--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 build/
 sdkconfig
 sdkconfig.old
-.DS_Store
-.vscode/settings.json
+**/.DS_Store
+**/.vscode/settings.json
+**/.vscode/c_cpp_properties.json
