--- a/test_apps/main/CMakeLists.txt
+++ b/test_apps/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRC_DIRS "."
-                       INCLUDE_DIRS "." "../include"
-                       PRIV_REQUIRES unity)
+                       INCLUDE_DIRS "."
+                       PRIV_REQUIRES unity
+                       WHOLE_ARCHIVE)
