--- a/test_apps/main/CMakeLists.txt
+++ b/test_apps/main/CMakeLists.txt
@@ -2,3 +2,5 @@ idf_component_register(SRC_DIRS "."
                        INCLUDE_DIRS "."
                        PRIV_REQUIRES unity
                        WHOLE_ARCHIVE)
+
+target_compile_options(${COMPONENT_LIB} PRIVATE -std=gnu++23 -DTESTING)
